samples/_failures_safe/1761088218_45f7a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3cc6c4b9.c: In function ‘main’:
./samples/SAFE/__tmp_3cc6c4b9.c:168:5: error: expected expression at end of input
  168 |     int num_events = sizeof(
      |     ^~~
./samples/SAFE/__tmp_3cc6c4b9.c:168:5: error: expected declaration or statement at end of input
